# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter-check.yml  pyci.yml  tests-check.yml
gendiff/: cli_parser.py  file_parser.py  formatter.py  gendiff.py  parser.py  status_constants.py
gendiff/formatters/: get_format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  main.py
tests/: test_file_parser.py  test_format_plain_value.py  test_gendiff.py
tests/fixtures/wrong/: wrong.yml
